@@ -520,7 +520,7 @@ public class TypeInference extends SSAInference<TypeVariable> implements FixedPo
       if (!doPrimitives) {
         result = null;
       } else {
-        result = new DeclaredTypeOperator(language.getPrimitive(language.getConstantType(new Integer(1))));
+        result = new DeclaredTypeOperator(language.getPrimitive(language.getConstantType(Integer.valueOf(1))));
       }
     }
 
@@ -622,7 +622,7 @@ public class TypeInference extends SSAInference<TypeVariable> implements FixedPo
     @Override
     public void visitComparison(SSAComparisonInstruction instruction) {
       if (doPrimitives) {
-        result = new DeclaredTypeOperator(language.getPrimitive(language.getConstantType(new Integer(0))));
+        result = new DeclaredTypeOperator(language.getPrimitive(language.getConstantType(Integer.valueOf(0))));
       }
     }
 
