@@ -123,22 +123,22 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
 
   private final static Map<String, Integer> elementMap = HashMapFactory.make(14);
   static {
-    elementMap.put("classloader", new Integer(E_CLASSLOADER));
-    elementMap.put("method", new Integer(E_METHOD));
-    elementMap.put("class", new Integer(E_CLASS));
-    elementMap.put("package", new Integer(E_PACKAGE));
-    elementMap.put("call", new Integer(E_CALL));
-    elementMap.put("new", new Integer(E_NEW));
-    elementMap.put("poison", new Integer(E_POISON));
-    elementMap.put("summary-spec", new Integer(E_SUMMARY_SPEC));
-    elementMap.put("return", new Integer(E_RETURN));
-    elementMap.put("putstatic", new Integer(E_PUTSTATIC));
-    elementMap.put("aastore", new Integer(E_AASTORE));
-    elementMap.put("putfield", new Integer(E_PUTFIELD));
-    elementMap.put("getfield", new Integer(E_GETFIELD));
-    elementMap.put("throw", new Integer(E_ATHROW));
-    elementMap.put("constant", new Integer(E_CONSTANT));
-    elementMap.put("aaload", new Integer(E_AALOAD));
+    elementMap.put("classloader", Integer.valueOf(E_CLASSLOADER));
+    elementMap.put("method", Integer.valueOf(E_METHOD));
+    elementMap.put("class", Integer.valueOf(E_CLASS));
+    elementMap.put("package", Integer.valueOf(E_PACKAGE));
+    elementMap.put("call", Integer.valueOf(E_CALL));
+    elementMap.put("new", Integer.valueOf(E_NEW));
+    elementMap.put("poison", Integer.valueOf(E_POISON));
+    elementMap.put("summary-spec", Integer.valueOf(E_SUMMARY_SPEC));
+    elementMap.put("return", Integer.valueOf(E_RETURN));
+    elementMap.put("putstatic", Integer.valueOf(E_PUTSTATIC));
+    elementMap.put("aastore", Integer.valueOf(E_AASTORE));
+    elementMap.put("putfield", Integer.valueOf(E_PUTFIELD));
+    elementMap.put("getfield", Integer.valueOf(E_GETFIELD));
+    elementMap.put("throw", Integer.valueOf(E_ATHROW));
+    elementMap.put("constant", Integer.valueOf(E_CONSTANT));
+    elementMap.put("aaload", Integer.valueOf(E_AALOAD));
   }
 
   //
@@ -493,7 +493,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
         }
 
         int defNum = nextLocal;
-        symbolTable.put(defVar, new Integer(nextLocal++));
+        symbolTable.put(defVar, Integer.valueOf(nextLocal++));
 
         governingMethod.addStatement(insts.InvokeInstruction(governingMethod.getNumberOfStatements(), defNum, params, exceptionValue, site, null));
       } else {
@@ -526,7 +526,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
         defVar = "L" + nextLocal;
       }
       int defNum = nextLocal;
-      symbolTable.put(defVar, new Integer(nextLocal++));
+      symbolTable.put(defVar, Integer.valueOf(nextLocal++));
 
       // create the allocation statement and add it to the method summary
       NewSiteReference ref = NewSiteReference.make(governingMethod.getNextProgramCounter(), type);
@@ -602,7 +602,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
         Assertions.UNREACHABLE("Must specify def for getfield " + governingMethod);
       }
       int defNum = nextLocal;
-      symbolTable.put(defVar, new Integer(nextLocal++));
+      symbolTable.put(defVar, Integer.valueOf(nextLocal++));
 
       // get the ref read from
       String R = atts.getValue(A_REF);
@@ -778,7 +778,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
         Assertions.UNREACHABLE("Must specify def for getfield " + governingMethod);
       }
       int defNum = nextLocal;
-      symbolTable.put(defVar, new Integer(nextLocal++));
+      symbolTable.put(defVar, Integer.valueOf(nextLocal++));
       SSAArrayLoadInstruction S = insts.ArrayLoadInstruction(governingMethod.getNumberOfStatements(), defNum, refNumber.intValue(), 0,
           type);
       governingMethod.addStatement(S);
@@ -806,7 +806,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
             } else {
               valueNumber = symbolTable.get(V_NULL);
               if (valueNumber == null) {
-                valueNumber = new Integer(nextLocal++);
+                valueNumber = Integer.valueOf(nextLocal++);
                 symbolTable.put(V_NULL, valueNumber);
               }
             }
@@ -825,17 +825,17 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
       String var = atts.getValue(A_NAME);
       if (var == null)
         Assertions.UNREACHABLE("Must give name for constant");
-      Integer valueNumber = new Integer(nextLocal++);
+      Integer valueNumber = Integer.valueOf(nextLocal++);
       symbolTable.put(var, valueNumber);
 
       String typeString = atts.getValue(A_TYPE);
       String valueString = atts.getValue(A_VALUE);
 
-      governingMethod.addConstant(valueNumber, (typeString.equals("int")) ? new ConstantValue(new Integer(valueString))
-          : (typeString.equals("long")) ? new ConstantValue(new Long(valueString))
-              : (typeString.equals("short")) ? new ConstantValue(new Short(valueString))
-                  : (typeString.equals("float")) ? new ConstantValue(new Float(valueString))
-                      : (typeString.equals("double")) ? new ConstantValue(new Double(valueString)) : null);
+      governingMethod.addConstant(valueNumber, (typeString.equals("int")) ? new ConstantValue(Integer.valueOf(valueString))
+          : (typeString.equals("long")) ? new ConstantValue(Long.valueOf(valueString))
+              : (typeString.equals("short")) ? new ConstantValue(Short.valueOf(valueString))
+                  : (typeString.equals("float")) ? new ConstantValue(Float.valueOf(valueString))
+                      : (typeString.equals("double")) ? new ConstantValue(Double.valueOf(valueString)) : null);
     }
 
     /**
@@ -925,7 +925,7 @@ public class XMLMethodSummaryReader implements BytecodeConstants {
       symbolTable = HashMapFactory.make(5);
       // create symbols for the parameters
       for (int i = 0; i < nParams; i++) {
-        symbolTable.put("arg" + i, new Integer(i + 1));
+        symbolTable.put("arg" + i, Integer.valueOf(i + 1));
       }
       
       int pn = 1;
