@@ -203,7 +203,7 @@ public class AppModelMethod {
 		nextLocal = nParams + 1;
 		symbolTable = HashMapFactory.make(5);
 		for (int i = 0; i < nParams; i++) {
-			symbolTable.put("arg" + i, new Integer(i + 1));
+			symbolTable.put("arg" + i, Integer.valueOf(i + 1));
 		}
     }	
     
