@@ -382,16 +382,16 @@ public class OfflineDynamicCallGraph {
             final byte itemType = p.getItemType(i);
             switch (itemType) {
             case CONSTANT_Integer:
-              entries.put(new Integer(p.getCPInt(i)), i);
+              entries.put(Integer.valueOf(p.getCPInt(i)), i);
               break;
             case CONSTANT_Long:
-              entries.put(new Long(p.getCPLong(i)), i);
+              entries.put(Long.valueOf(p.getCPLong(i)), i);
               break;
             case CONSTANT_Float:
-              entries.put(new Float(p.getCPFloat(i)), i);
+              entries.put(Float.valueOf(p.getCPFloat(i)), i);
               break;
             case CONSTANT_Double:
-              entries.put(new Double(p.getCPDouble(i)), i);
+              entries.put(Double.valueOf(p.getCPDouble(i)), i);
               break;
             case CONSTANT_Utf8:
               entries.put(p.getCPUtf8(i), i);
