@@ -265,40 +265,40 @@ public class ClassWriter implements ClassConstants {
         byte t = cp.getItemType(i);
         switch (t) {
         case CONSTANT_String:
-          cachedCPEntries.put(new CWStringItem(cp.getCPString(i), CONSTANT_String), new Integer(i));
+          cachedCPEntries.put(new CWStringItem(cp.getCPString(i), CONSTANT_String), Integer.valueOf(i));
           break;
         case CONSTANT_Class:
-          cachedCPEntries.put(new CWStringItem(cp.getCPClass(i), CONSTANT_Class), new Integer(i));
+          cachedCPEntries.put(new CWStringItem(cp.getCPClass(i), CONSTANT_Class), Integer.valueOf(i));
           break;
         case CONSTANT_MethodType:
-          cachedCPEntries.put(new CWStringItem(cp.getCPMethodType(i), CONSTANT_MethodType), new Integer(i));
+          cachedCPEntries.put(new CWStringItem(cp.getCPMethodType(i), CONSTANT_MethodType), Integer.valueOf(i));
           break;
         case CONSTANT_MethodHandle:
         case CONSTANT_FieldRef:
         case CONSTANT_InterfaceMethodRef:
         case CONSTANT_MethodRef:
-          cachedCPEntries.put(new CWRef(t, cp.getCPRefClass(i), cp.getCPRefName(i), cp.getCPRefType(i)), new Integer(i));
+          cachedCPEntries.put(new CWRef(t, cp.getCPRefClass(i), cp.getCPRefName(i), cp.getCPRefType(i)), Integer.valueOf(i));
           break;
         case CONSTANT_NameAndType:
-          cachedCPEntries.put(new CWNAT(cp.getCPNATName(i), cp.getCPNATType(i)), new Integer(i));
+          cachedCPEntries.put(new CWNAT(cp.getCPNATName(i), cp.getCPNATType(i)), Integer.valueOf(i));
           break;
         case CONSTANT_InvokeDynamic:
-          cachedCPEntries.put(new CWInvokeDynamic(cp.getCPDynBootstrap(i), cp.getCPDynName(i), cp.getCPDynType(i)), new Integer(i));
+          cachedCPEntries.put(new CWInvokeDynamic(cp.getCPDynBootstrap(i), cp.getCPDynName(i), cp.getCPDynType(i)), Integer.valueOf(i));
           break;
         case CONSTANT_Integer:
-          cachedCPEntries.put(new Integer(cp.getCPInt(i)), new Integer(i));
+          cachedCPEntries.put(Integer.valueOf(cp.getCPInt(i)), Integer.valueOf(i));
           break;
         case CONSTANT_Float:
-          cachedCPEntries.put(new Float(cp.getCPFloat(i)), new Integer(i));
+          cachedCPEntries.put(Float.valueOf(cp.getCPFloat(i)), Integer.valueOf(i));
           break;
         case CONSTANT_Long:
-          cachedCPEntries.put(new Long(cp.getCPLong(i)), new Integer(i));
+          cachedCPEntries.put(Long.valueOf(cp.getCPLong(i)), Integer.valueOf(i));
           break;
         case CONSTANT_Double:
-          cachedCPEntries.put(new Double(cp.getCPDouble(i)), new Integer(i));
+          cachedCPEntries.put(Double.valueOf(cp.getCPDouble(i)), Integer.valueOf(i));
           break;
         case CONSTANT_Utf8:
-          cachedCPEntries.put(cp.getCPUtf8(i), new Integer(i));
+          cachedCPEntries.put(cp.getCPUtf8(i), Integer.valueOf(i));
           break;
         default:
           throw new UnsupportedOperationException(String.format("unexpected constant-pool item type %s", t));
@@ -326,7 +326,7 @@ public class ClassWriter implements ClassConstants {
     } else {
       int index = nextCPIndex;
       nextCPIndex += size;
-      i = new Integer(index);
+      i = Integer.valueOf(index);
       cachedCPEntries.put(o, i);
       newCPEntries.add(o);
       if (nextCPIndex > 0xFFFF) {
@@ -351,7 +351,7 @@ public class ClassWriter implements ClassConstants {
    * @return the index of a constant pool item with the right value
    */
   public int addCPInt(int i) {
-    return addCPEntry(new Integer(i), 1);
+    return addCPEntry(Integer.valueOf(i), 1);
   }
 
   /**
@@ -360,7 +360,7 @@ public class ClassWriter implements ClassConstants {
    * @return the index of a constant pool item with the right value
    */
   public int addCPFloat(float f) {
-    return addCPEntry(new Float(f), 1);
+    return addCPEntry(Float.valueOf(f), 1);
   }
 
   /**
@@ -369,7 +369,7 @@ public class ClassWriter implements ClassConstants {
    * @return the index of a constant pool item with the right value
    */
   public int addCPLong(long l) {
-    return addCPEntry(new Long(l), 2);
+    return addCPEntry(Long.valueOf(l), 2);
   }
 
   /**
@@ -378,7 +378,7 @@ public class ClassWriter implements ClassConstants {
    * @return the index of a constant pool item with the right value
    */
   public int addCPDouble(double d) {
-    return addCPEntry(new Double(d), 2);
+    return addCPEntry(Double.valueOf(d), 2);
   }
 
   private int addCPString(String s, byte type) {
